...
const geistMono = Geist_Mono({
  variable: "--font-geist-mono",
  subsets: ["latin"],
});

export const metadata: Metadata = {
  title: "GameOn",
  description: "GameOn Admin dashboard",
};

export default function RootLayout({
  children,
}: Readonly<{
...
