appId: host.exp.Exponent
---
- launchApp: host.exp.Exponent

- tapOn: GameOn

- runFlow: "teams/create-team-flow.yaml"

- tapOn: End2EndRunners, Soccer, Forward

- tapOn: sportscourt

- tapOn: Person
- assertVisible:
    id: playmaker-board-pressable

- tapOn:
    point: 15%, 20%

- tapOn:
    point: 15%, 30%

- tapOn: Arrow

- tapOn:
    point: 15%, 20%

- tapOn: Select

- tapOn:
    point: 15%, 30%

- doubleTapOn: Assign GameOn EndToEnd to player icon

- tapOn: End2EndRunners


- tapOn: settings
- tapOn: Delete Team

- tapOn: Delete
